reorganized the repository, created the virtual environment and the chart example

--- a/project/DataProduct.html
+++ b/project/DataProduct.html
@@ -28,7 +28,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-    <object id="mapa" type="image/svg+xml" data="Cuba.svg"></object>
+    <object id="mapa" type="image/svg+xml" data="/utils/Cuba.svg"></object>
     <div id="scrollbar-container">
         <input id="scrollbar" type="range" min="1990" max="2023" value="1990">
     </div>
